Enhance 'Sobre Mim' section with detailed academic background and experience

--- a/index.html
+++ b/index.html
@@ -228,8 +228,12 @@
         <div class="about-title">
           <h2 class="title">Formação</h2>
           <a class="description">
-            Graduando em Ciência da Computação. Participação na OBI, com foco em
-            POO com Python e fundamentos sólidos em lógica de programação.
+            Graduando em Ciência da Computação, com sólida formação acadêmica e
+            interesse ativo na área de tecnologia. Participei da Olimpíada
+            Brasileira de Informática (OBI), onde desenvolvi habilidades
+            analíticas e lógicas. Na universidade, aprofundei meus conhecimentos
+            em Programação Orientada a Objetos utilizando Python, consolidando
+            minha base em desenvolvimento de software.
           </a>
         </div>
       </div>
