Style updates for graduation and languages sections with new title classes

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       <!-- Formação acadêmica -->
       <div class="container">
         <div class="about-title">
-          <h2 class="title">Formação</h2>
+          <h2 class="title-graduation">Formação</h2>
           <a class="description">
             Graduando em Ciência da Computação, com sólida formação acadêmica e
             interesse ativo na área de tecnologia. Participei da Olimpíada
@@ -241,7 +241,7 @@
       <!-- Idiomas -->
       <div class="container">
         <div class="about-title">
-          <h2 class="title">Idiomas</h2>
+          <h2 class="title-languages">Idiomas</h2>
         </div>
         <div class="services-row">
           <div
