Enhance project description for 'FastFood IA' to improve clarity and engagement

--- a/index.html
+++ b/index.html
@@ -284,8 +284,11 @@
         <div class="projects-title">
           <h2 class="title">FastFood IA</h2>
           <p class="description">
-            Uma IA amigável e eficiente para facilitar pedidos de FastFood.
-            Sugere, entende preferências e acompanha todo o processo.
+            Conheça uma IA simpática e eficiente que transforma seu pedido de
+            fast food em uma experiência rápida e prazerosa. Ela entende seus
+            gostos, sugere delícias que combinam com você e te acompanha em cada
+            passo do pedido — como um amigo que sabe exatamente o que você quer
+            saborear!
           </p>
         </div>
 
